# base-containers-orphans

./: CHANGELOG.md  LICENSE  README.md  base-containers-orphans.cabal  build_matrix.sh  stack.yaml
src/Data/IntMap/: Orphans.hs
src/Data/IntSet/: Orphans.hs
src/Data/Map/: Orphans.hs
src/Data/Sequence/: Orphans.hs
src/Data/Set/: Orphans.hs
src/Data/Tree/: Orphans.hs
test/: instances-exist.hs
