name:                base-containers-orphans
version:             0.1.0.0
synopsis:            Orphan instances for classes in base and types in containers.
description:         This package provides orphan instances for classes defined in base and types defined in containers.
homepage:            https://github.com/viercc/base-containers-orphans#readme
license:             BSD3
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
copyright:           Koji Miyazato
category:            Compatibility
build-type:          Simple
cabal-version:       >=2.0
extra-source-files:  README.md, CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Data.IntMap.Orphans,
                       Data.IntSet.Orphans,
                       Data.Map.Orphans,
                       Data.Set.Orphans,
                       Data.Sequence.Orphans,
                       Data.Tree.Orphans
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5
                     , containers >= 0.5.7
  ghc-options:         -Wall -Wno-orphans

test-suite instances-exist
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             instances-exist.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5
                     , containers >= 0.5.7
                     , base-containers-orphans
  ghc-options:         -Wall

                  
